<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.scorekeeper.MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backdround_game">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp5">
            <LinearLayout
            android:id="@+id/upper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp300"
            android:orientation="horizontal">

                <TextView
                android:id="@+id/score_team_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                style="@style/TextViewScore"/>

                <RelativeLayout android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/idol_1"
                        android:layout_width="@dimen/dp60"
                        android:layout_height="@dimen/dp80"
                        android:layout_marginTop="@dimen/dp40"
                        android:src="@drawable/idol1"
                        android:background="@android:color/white"/>

                    <ImageView
                        android:id="@+id/idol_2"
                        android:layout_width="@dimen/dp60"
                        android:layout_height="@dimen/dp80"
                        android:layout_toEndOf="@id/idol_1"
                        android:layout_marginTop="@dimen/dp40"
                        android:src="@drawable/idol2"
                        android:background="@android:color/white"/>

                    <ImageView
                        android:id="@+id/play_1"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp100"
                        android:layout_below="@id/idol_1"
                        android:layout_marginTop="@dimen/dp30"
                        android:scaleType="centerInside"
                        android:src="@drawable/play1"
                        android:visibility="invisible"
                        android:background="@android:color/white"/>

                    <ImageView
                        android:id="@+id/play_2"
                        android:layout_width="@dimen/dp80"
                        android:layout_height="@dimen/dp100"
                        android:layout_below="@id/idol_2"
                        android:layout_marginTop="@dimen/dp30"
                        android:layout_toEndOf="@id/play_1"
                        android:src="@drawable/play2"
                        android:visibility="invisible"
                        android:background="@android:color/white"/>
                </RelativeLayout>

                <TextView
                android:id="@+id/score_team_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                style="@style/TextViewScore"/>


            </LinearLayout>


            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/stroke"
                android:layout_below="@id/upper"
                android:background="@color/fillYellow"
                android:padding="@dimen/dp5"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_margin="@dimen/dp10"
                android:textSize="@dimen/sp24" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_goal_1"
                android:text="@string/goal"
                android:layout_below="@id/timer"
                style="@style/btn1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_goal_2"
                android:text="@string/goal"
                android:layout_below="@id/timer"
                style="@style/btn2"/>
            <Button
                android:id="@+id/btn_touch_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_goal_1"
                android:text="@string/touchdown"
                style="@style/btn1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_touch_2"
                android:text="@string/touchdown"
                android:layout_below="@id/btn_goal_2"
                style="@style/btn2"/>
            <Button
                android:id="@+id/btn_extra_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra"
                android:layout_below="@id/btn_touch_1"
                style="@style/btn1"/>
            <Button
                android:id="@+id/btn_extra_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra"
                android:layout_below="@id/btn_touch_2"
                style="@style/btn2"/>
            <Button
                android:id="@+id/btn_foul_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_extra_1"
                android:text="@string/foul"
                style="@style/btn1"/>
            <Button
                android:id="@+id/btn_foul_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_extra_2"
                android:text="@string/foul"
                style="@style/btn2"/>
            <Button
                android:id="@+id/btn_safety_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety"
                android:layout_below="@id/btn_foul_1"
                style="@style/btn1"/>
            <Button
                android:id="@+id/btn_safety_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety"
                android:layout_below="@id/btn_foul_2"
                style="@style/btn2"/>

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                android:layout_below="@id/btn_safety_2"
                android:text="@string/reset"
                android:layout_centerHorizontal="true"
                android:background="@drawable/play_button"/>


    </RelativeLayout>
</ScrollView>
